SERVER-93832 Optimize collectionless agg pipelines that run completely on mongos [v8.0] (#29048)

GitOrigin-RevId: 80a803afa5819b8e9dff3fb2936a12be1479c6ff